--- a/frontend/src/components/app/App.css
+++ b/frontend/src/components/app/App.css
@@ -21,6 +21,16 @@ body {
   border-bottom: 1px solid #29487d;
 }
 
+.header-link {
+  text-decoration: none;
+}
+
+.header-title {
+  margin: 0;
+  font-size: 24px;
+  font-weight: bold;
+}
+
 .main-content {
   display: flex;
   height: calc(100% - 60px); /* Subtract header height */
@@ -135,15 +145,6 @@ body {
   background-color: #4b4b4b;
 }
 
-/* Post styles */
-.post-container {
-  border: 1px solid #dddfe2;
-  border-radius: 8px;
-  padding: 10px;
-  margin-bottom: 10px;
-  background-color: #fff;
-}
-
 .username {
   font-weight: 600;
   color: #365899;
@@ -159,7 +160,7 @@ body {
 }
 
 /* PostForm styles */
-.post-form .comment {
+.post-form {
   margin-top: 20px;
 }
 
@@ -183,4 +184,184 @@ body {
 
 .post-form button:hover {
   background-color: #365899;
+}
+
+.notification-container {
+  position: relative;
+}
+
+.notifications-list {
+  margin-top: 20px;
+  max-height: 400px;
+  overflow-y: auto;
+  padding: 16px;
+  border-radius: 4px;
+  background-color: white;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.notification-item {
+  border-bottom: 1px solid #f0f0f0;
+  padding: 8px 0;
+}
+
+/* Customise the comment section for tree-style view */
+.comment-container {
+  border: 1px solid #dddfe2;
+  padding: 10px;
+  background-color: #f5f6f7;
+  margin-left: 15px;
+  border-radius: 5px;
+  transition: all 0.2s ease-in-out;
+}
+
+.comment-container:hover {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  background-color: #e4e6e9;
+}
+
+.comment-container .username {
+  color: #365899;
+  font-weight: bold;
+}
+
+.comment-container .time {
+  font-size: 0.8em;
+  color: #606770;
+}
+
+.comment-container .comment {
+  color: #1d2129;
+}
+
+/* Redesign post container */
+.post-container {
+  border: 1px solid #dddfe2;
+  border-radius: 8px;
+  padding: 15px;
+  background-color: #ffffff;
+  margin-bottom: 20px;
+  transition: all 0.2s ease-in-out;
+}
+
+.post-container:hover {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.author-details {
+  display: flex;
+  align-items: center;
+}
+
+.author {
+  width: 50px; /* Adjust the width as desired */
+  height: 50px; /* Adjust the height as desired */
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 10px; /* Add spacing between profile image and username */
+}
+
+.author-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.text-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.post-image-container {
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.post-image-container.zoomed {
+  cursor: zoom-out;
+}
+
+.post-image {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+.post-image-container.zoomed .zoomed-image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 9999;
+}
+
+.post-image-container.zoomed .zoomed-image {
+  max-width: 90%;
+  max-height: 90%;
+}
+
+.post-image-container.zoomed .zoomed-image-close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 5px;
+  font-size: 16px;
+  color: #fff;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+/* Redesign comment form */
+.comment-form {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.comment-form input {
+  flex-grow: 1;
+  height: 35px;
+  padding: 10px;
+  border: 1px solid #ccd0d5;
+  border-radius: 20px;
+}
+
+.comment-form button {
+  padding: 8px 16px;
+  background-color: #4267b2;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.comment-form button:hover {
+  background-color: #365899;
+}
+
+/* Styling for the div that wraps around PostForm */
+.create-post-container {
+  display: flex;
+  flex-direction: column; /* aligns items vertically */
+  justify-content: center; /* center items vertically */
+  align-items: center; /* center items horizontally */
+  padding: 10px;
+  border: 1px solid #dddfe2;
+  border-radius: 5px;
+  background-color: #f5f6f7;
+  transition: all 0.2s ease-in-out;
+}
+
+.create-post-container:hover {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  background-color: #e4e6e9;
 }
